2022 Day 16 rewrite + part 2